--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+
     <title>QuasarX - Home Page</title>
   </head>
   <body>
