--- a/spaceX.html
+++ b/spaceX.html
@@ -52,9 +52,9 @@
       <h3>SpaceX</h3>
       <p>First orbital class rocket capable of reflight</p>
     </div>
-   
+   <div class="video-container">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/mhJRzQsLZGg?si=x_4mSGRQjbpjXOK1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
+  </div>
  <!-- Section A -->
  <section class="section-spaceX-a">
   <div class="section-inner">
