--- a/event5.html
+++ b/event5.html
@@ -89,12 +89,12 @@
     <footer>
       <ul>
         <li>QuasarX &copy; 2023</li>
-        <li><a href="https://twitter.com/KarmanyaY">Twitter</a></li>
-        <li><a href="https://www.youtube.com/channel/UCEb_5QbE8dC2bkArtqmqL-g">YouTube</a></li>
-        <li><a href="https://www.instagram.com/karmanyaravindra/">Instagram</a></li>
-        <li><a href="https://www.linkedin.com/in/karmanya-ravindra-1332811b6/">LinkedIn</a></li>
-        <li><a href="#">Privacy</a></li>
-        <li><a href="#">Official Site</a></li>
+        <li><a href="https://linktr.ee/QuasarXsocials">Twitter</a></li>
+        <li><a href="https://linktr.ee/QuasarXsocials">YouTube</a></li>
+        <li><a href="https://linktr.ee/QuasarXsocials">Instagram</a></li>
+        <li><a href="https://linktr.ee/QuasarXsocials">LinkedIn</a></li>
+        <li><a href="https://www.netlify.com/privacy/">Privacy</a></li>
+        <li><a href="https://quasarx.netlify.app">Official Site</a></li>
       </ul>
     </footer>
   </body>
