--- a/isro.html
+++ b/isro.html
@@ -148,7 +148,7 @@
         <li><a href="https://www.youtube.com/channel/UCw5hEVOTfz_AfzsNFWyNlNg">YouTube</a></li>
         <li><a href="https://www.instagram.com/isro.dos/">Instagram</a></li>
         <li><a href="https://in.linkedin.com/company/officialisro">LinkedIn</a></li>
-        <li><a href="#">Privacy</a></li>
+        <li><a href="https://www.netlify.com/privacy/">Privacy</a></li>
         <li><a href="https://www.isro.gov.in">Official Site</a></li>
       </ul>
     </footer>
