--- a/logreg.html
+++ b/logreg.html
@@ -100,7 +100,7 @@
  <footer>
       <ul>
         <li>QuasarX &copy; 2023</li>
-        <li><a href="https://twitter.com/KarmanyaY">Twitter</a></li>
+        <li><a href="https://linktr.ee/QuasarXsocials">Twitter</a></li>
         <li><a href="https://www.youtube.com/channel/UCEb_5QbE8dC2bkArtqmqL-g">YouTube</a></li>
         <li><a href="https://www.instagram.com/karmanyaravindra/">Instagram</a></li>
         <li><a href="https://www.linkedin.com/in/karmanya-ravindra-1332811b6/">LinkedIn</a></li>
