--- a/nasa.html
+++ b/nasa.html
@@ -143,7 +143,7 @@
         <li><a href="https://www.youtube.com/@NASA">YouTube</a></li>
         <li><a href="https://www.instagram.com/NASA/">Instagram</a></li>
         <li><a href="https://www.linkedin.com/company/nasa/">LinkedIn</a></li>
-        <li><a href="#">Privacy</a></li>
+        <li><a href="https://www.netlify.com/privacy/">Privacy</a></li>
         <li><a href="https://www.nasa.gov">Official Site</a></li>
       </ul>
     </footer>
