--- a/roscosmos.html
+++ b/roscosmos.html
@@ -131,7 +131,7 @@
         <li><a href="https://www.youtube.com/@tvroscosmos">YouTube</a></li>
         <li><a href="https://www.instagram.com/roscosmosofficial/">Instagram</a></li>
         <li><a href="https://www.linkedin.com/company/roscosmos/">LinkedIn</a></li>
-        <li><a href="#">Privacy</a></li>
+        <li><a href="https://www.netlify.com/privacy/">Privacy</a></li>
         <li><a href="https://www.iafastro.org/membership/all-members/roscosmos.html">Official Site</a></li>
       </ul>
     </footer>
