--- a/spaceX.html
+++ b/spaceX.html
@@ -142,7 +142,7 @@
         <li><a href="https://www.youtube.com/spacex">YouTube</a></li>
         <li><a href="https://www.instagram.com/spacex/?hl=en">Instagram</a></li>
         <li><a href="https://www.linkedin.com/company/spacex/">LinkedIn</a></li>
-        <li><a href="#">Privacy</a></li>
+        <li><a href="https://www.netlify.com/privacy/">Privacy</a></li>
         <li><a href="https://www.spacex.com">Official Site</a></li>
       </ul>
     </footer>
