--- a/user.html
+++ b/user.html
@@ -19,6 +19,7 @@
         <li class="mobile-only"><a href="roscosmos.html">ROSCOSMOS</a></li>
         <li class="mobile-only"><a href="celevents.html">Celestial Events</a></li>
         <li class="mobile-only"><a href="logreg.html">Login/Register</a></li>
+        <li class="mobile-only"><a href="user.html">User Dashboard</a></li>
       </ul>
     </div>
     <header class="main-header">
@@ -35,6 +36,7 @@
           <li><a href="roscosmos.html">Roscosmos</a></li>
           <li><a href="celevents.html">Celestial Events</a></li>
           <li><a href="logreg.html">Login/Register</a></li>
+          <li><a href="user.html">User Dashboard</a></li>
         </ul>
       </nav>
     </header>
