--- a/logreg.html
+++ b/logreg.html
@@ -67,24 +67,30 @@
  <!----------------------------------------------------->
 <!-- YourAppName/templates/register.html -->
 <!-- Add a div with the "g-signin2" class for the sign-in button -->
-<button onclick="redirectToUserPage()">Sign In</button>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+
+<!-- Google Sign-In button -->
+<div class="g-signin2" data-onsuccess="onSignIn"></div>
+
 <script>
-  function redirectToUserPage() {
-    // Simulate sign-in logic
-    var fakeGoogleUser = { getBasicProfile: function() {} };
-    onSignIn(fakeGoogleUser);
-  }
+  // Load the Google API library
+  gapi.load('auth2', function() {
+    gapi.auth2.init({
+      client_id: '28200107832-bkr3m3jsgpfssk2q6ma97o2dfdp19j5i.apps.googleusercontent.com'  // Replace with your actual Google Client ID
+    });
+  });
 
   function onSignIn(googleUser) {
-    // Handle the sign-in logic here
-    // ...
+    // Get user profile information
+    var profile = googleUser.getBasicProfile();
+    console.log('ID: ' + profile.getId());
+    console.log('Name: ' + profile.getName());
+    console.log('Email: ' + profile.getEmail());
 
     // Redirect to user.html after successful sign-in
-    window.location.replace('user.html');
+    window.location.href = 'user.html';
   }
 </script>
-
-
 <!-- Add a link with an onclick event for the sign-out button -->
 <div class="g-signout2" data-onsuccess="onSignOut"></div>
 <a href="logreg.html" onclick="signOut();"></a>
