--- a/logreg.html
+++ b/logreg.html
@@ -80,17 +80,15 @@
     });
   });
 
+  // Callback function when the user signs in
   function onSignIn(googleUser) {
-    // Get user profile information
-    var profile = googleUser.getBasicProfile();
-    console.log('ID: ' + profile.getId());
-    console.log('Name: ' + profile.getName());
-    console.log('Email: ' + profile.getEmail());
+    // You can handle the sign-in logic here if needed
 
     // Redirect to user.html after successful sign-in
     window.location.href = 'user.html';
   }
 </script>
+
 <!-- Add a link with an onclick event for the sign-out button -->
 <div class="g-signout2" data-onsuccess="onSignOut"></div>
 <a href="logreg.html" onclick="signOut();"></a>
